# prefect_demo

./: .gitignore  prefect.yaml  pyproject.toml
config/: sample_config.json
orchestrator/flows/: greeting_flow.py  sample_flow.py
orchestrator/tasks/: greet.py
