[project]
name = "prefect-local"
version = "0.1.0"
description = ""
authors = [
    {name = "SudheekshaCS630",email = "kota.sudheeksha@cloudsufi.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "prefect (==3.3.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
